--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 chrono = "*"
 reqwest = "*"
 email = "*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.38"
