--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ reqwest = "*"
 email = "*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.38"
+slog = "*"
+slog-syslog = "*"
+slog-async = "*"
+slog-term = "*"
