--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 [dependencies]
 chrono = "*"
 reqwest = "*"
-email = { git = "https://github.com/thommay/rust-email.git", branch = "params_with_spaces" }
+#email = { git = "https://github.com/thommay/rust-email.git", branch = "params_with_spaces" }
+email = { git = "https://github.com/niax/rust-email.git" }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.38"
+serde_json = "1.0"
 slog = "*"
 slog-syslog = "*"
 slog-async = "*"
